--- a/Lovebeautymakeup.html
+++ b/Lovebeautymakeup.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="GameTeamHW : home" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css">
-    <title>Love beauty makeup</title>
+    <title>Privacy Policy</title>
   </head>
   <body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Home design</h1>
+          <h1 id="project_title">Love beauty makeup</h1>
         </header>
     </div>
     <!-- MAIN CONTENT -->
