--- a/ParkingMaster.html
+++ b/ParkingMaster.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Home design</h1>
+          <h1 id="project_title">ParkingMaster</h1>
         </header>
     </div>
     <!-- MAIN CONTENT -->
